--- a/01_Newbie/01_Results-summary-component/styles/styles.css
+++ b/01_Newbie/01_Results-summary-component/styles/styles.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700;800&display=swap');
 
+/* Global variables to be used in the challenge */
 :root {
 
    /* Primary colors */
@@ -24,7 +25,6 @@
 
    /* Font Family */
    --font-family: 'Hanken Grotesk', sans-serif;
-
 }
 
 .body {
@@ -32,73 +32,269 @@
    justify-content: center;
    align-items: center;
    font-size: 18px;
+   flex-direction: column;
 }
 
-.container {
-   width: 500px;
-   height: 400px;
-   outline: 3px solid #000;
+.global__container {
    display: flex;
+   flex-direction: column;
 }
 
-.score {
-   width: 50%;
-   height: 100%;
-   outline: 3px solid red;
+.cards__container {
+   width: 500px;
+   height: 350px;
+   display: flex;
+   border-radius: 25px;
+   box-shadow: 3px 3px 24px -8px var(--neutral-light-lavender);
+}
+
+/* --------------------- LEFT CONTAINER (BLUE) --------------------- */
+
+.blue__container {
+   width: 250px;
    background-image: linear-gradient(var(--gradient-light-slate-blue), var(--gradient-light-royal-blue));
    border-radius: 25px;
 }
 
 .score__title {
    text-align: center;
-   padding: 15px;
+   padding: 20px;
    color: lightgray;
    font-family: var(--font-family);
    font-weight: 700;
 }
 
-.score__result {
+.ball__score__result {
    margin: auto;
-   width: 50%;
-   height: 30%;
-   outline: 3px solid yellowgreen;
+   width: 145px;
+   height: 145px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    border-radius: 50%;
+   background-image: linear-gradient(var(--gradient-violet-blue), var(--gradient-persian-blue));
 }
 
-.texts {
+.score__number {
+   font-size: 3rem;
+   color: var(--neutral-white);
+   font-family: var(--font-family);
+   font-weight: 800;
+   padding: 20px 0 10px 0;
+}
+
+.score__number2 {
+   color: lightgray;
+   font-family: var(--font-family);
+   font-size: .8rem;
+}
+
+.texts__container {
    margin: auto;
    display: flex;
    flex-direction: column;
    align-items: center;
+   padding: 20px;
+   width: 220px;
+}
+
+.text {
+   font-size: 1.5rem;
+   color: var(--neutral-white);
+   font-family: var(--font-family);
+   font-weight: 800;
+   padding-bottom: 15px;
 }
 
 .paragraph {
+   color: lightgray;
+   font-family: var(--font-family);
+   font-size: .8rem;
+   line-height: 17px;
    text-align: center;
 }
 
-.summary {
-   width: 50%;
-   height: 100%;
-   outline: 3px solid purple;
+/* --------------------- RIGHT CONTAINER (SUMMARY) --------------------- */
+
+.summary__container {
+   width: 250px;
+   color: var(--neutral-white);
+   display: flex;
+   justify-content: center;
 }
 
+.summary__title {
+   font-family: var(--font-family);
+   color: #000;
+   font-weight: 700;
+   padding: 20px 0 20px 0;
+}
 
+.skills__container {
+   width: 200px;
+}
 
+.skill__drawer {
+   height: 40px;
+   margin-bottom: 10px;
+   border-radius: 5px;
+   display: flex;
+   align-items: center;
+}
 
+.icon-skill__container {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   width: 50%;
+}
 
+.bck__reaction {
+   background-color: hsla(0, 100%, 67%, 0.081);
+}
 
+.bck__memory {
+   background-color: hsl(39, 100%, 56%, 0.081);
+}
 
+.bck__verbal {
+   background-color: hsl(166, 100%, 37%, 0.081);
+}
 
+.bck__visual {
+   background-color: hsl(234, 85%, 45%, 0.081);
+}
+
+.image {
+   width: 17px;
+   margin-left: 10px;
+}
+
+.skills__text {
+   font-family: var(--font-family);
+   font-weight: 700;
+   margin-left: 8px;
+   font-size: .9rem;
+}
+
+.text__reaction {
+   color: var(--color-light-red);
+}
+
+.text__memory {
+   color: var(--color-orangey-yellow);
+}
+
+.text__verbal {
+   color: var(--color-green-teal);
+}
+
+.text__visual {
+   color: var(--color-cobalt-blue);
+}
+
+.score__container {
+   width: 50%;
+   display: flex;
+   justify-content: end;
+}
+
+.skills__score {
+   font-family: var(--font-family);
+   font-weight: 800;
+   margin-right: 12px;
+   font-size: .9rem;
+   color: darkgray;
+}
+
+.num {
+   color: var(--neutral-dark-gray-blue);
+}
+
+.cta__button {
+   margin: 30px 0;
+   padding: 5px 0;
+   text-align: center;
+   border-radius: 30px;
+   background-color: var(--neutral-dark-gray-blue);
+   color: var(--neutral-white);
+   font-family: var(--font-family);
+   font-size: .8rem;
+}
+
+.cta__button:hover {
+   background-image: linear-gradient(var(--gradient-light-slate-blue), var(--gradient-light-royal-blue));
+}
+
+/* --------------------- FOOTER (ATTRIBUTION) --------------------- */
 
 .attribution {
-   font-size: 11px;
+   display: flex;
+   justify-content: space-around;
    text-align: center;
+   color: #000;
+   padding: 10px 0;
+   font-family: var(--font-family);
+   font-size: .8rem;
 }
 
 .attribution a {
    color: hsl(228, 45%, 44%);
+}
+
+/* --------------------- MOBILE ADAPTATION (500px) --------------------- */
+
+@media screen and (max-width: 500px) {
+
+   .global__container {
+      width: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+   }
+
+   .cards__container {
+      width: 100%;
+      flex-direction: column;
+      box-shadow: none;
+   }
+
+   .blue__container {
+      display: flex;
+      width: 100%;
+      border-radius: 25% 25% 10% 10% / 0% 0% 10% 10%;
+      flex-direction: column;
+   }
+
+   .texts__container {
+      width: 260px;
+   }
+
+   .text {
+      font-weight: 700;
+   }
+
+   .paragraph {
+      font-size: 1rem;
+   }
+
+   .summary__container {
+      width: 100%;
+   }
+
+   .skills__container {
+      width: 85%;
+   }
+
+   .icon-skill__container {
+      justify-content: start;
+   }
+
+   .attribution {
+      width: 100%;
+      position: absolute;
+      bottom: -350px;
+      font-size: .7rem;
+   }
 }
